# Low-LZ78

./: .gitmodules  CMakeLists.txt  README.md
include/: tools.h
include/LZ78/: lz78.h  trie.h
include/SLZ78/: bhlz78.h  defs.h  ghlz78.h  ghlz78S.h  ghlz78S2.h  gz2.h  hash_Bonsai.h  hash_D.h  hash_D_level.h  hash_E.h  hlz78.h  map_D.h  mhlz78.h
script_exp/: com_dec_10_times.sh  dna_all_exp.sh  english_all_exp.sh  exp_bfhlz.sh  get_stat_from_output.sh  proteins_all_exp.sh  time_space.sh  xml_all_exp.sh
tests/: CompressText.cpp  DecompressHLZ.cpp
